--- a/All-In-One/Server/wwwroot/wasm.html
+++ b/All-In-One/Server/wwwroot/wasm.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -8,10 +8,12 @@
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
+    <link href="AllinOne.Server.styles.css" rel="stylesheet" />
 </head>
 
 <body>
-    <app>Loading...</app>
+
+    <div id="app">Loading...</div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
